Updated to Vaadin 7.0.0.rc2. Also dropped support for loading layout files from VAADIN/layouts directory. Fixes #13